Add location input and more color variables

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
+  <section class="search">
+    <label for="location" class="search__label">
+      <i class="fas fa-map-marker-alt"></i>
+      <span class="search__label--hidden">Location</span>
+    </label>
+    <input type="text" id="location" class="search__input" value="Paris, Belleville" />
+  </section>
+
   <footer>
   </footer>
+
+  <script src="https://kit.fontawesome.com/d898f2f582.js" crossorigin="anonymous"></script>
 </body>
 </html>
