--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
-  <section class="search">
+  <div class="search">
     <label for="location" class="search__label">
       <i class="fas fa-map-marker-alt"></i>
       <span class="search__label--hidden">Location</span>
     </label>
     <input type="text" id="location" class="search__input" value="Paris, Belleville" />
-  </section>
+  </div>
 
   <footer>
   </footer>
