Add explore section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <input type="text" id="location" class="search__input" value="Paris, Belleville" />
   </div>
 
+  <section class="explore">
+    <h2 class="explore__heading">Réservez le menu qui vous convient</h2>
+    <p class="explore__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+    <span class="btn">Explorer nos restaurants</span>
+  </section>
+
   <footer>
   </footer>
 
