Fix some BEM structures and add operation section

--- a/index.html
+++ b/index.html
@@ -20,10 +20,35 @@
     <input type="text" id="location" class="search__input" value="Paris, Belleville" />
   </div>
 
-  <section class="explore">
-    <h2 class="explore__heading">Réservez le menu qui vous convient</h2>
-    <p class="explore__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+  <section class="section section--centered section--alt">
+    <h2 class="section__heading">Réservez le menu qui vous convient</h2>
+    <p class="section__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
     <span class="btn">Explorer nos restaurants</span>
+  </section>
+
+  <section class="section">
+    <h2 class="section__heading">Fonctionnement</h2>
+    <div class="flex flex--responsive-columns">
+      <div class="operation operation--first">
+        <div class="operation__number">1</div>
+        <i class="operation__icon fas fa-mobile-alt"></i>
+        <div class="operation__text">Choisissez un restaurant</div>
+      </div>
+      <div class="operation">
+        <div class="operation__number">2</div>
+        <i class="operation__icon fas fa-list-ul"></i>
+        <div class="operation__text">Composez votre menu</div>
+      </div>
+      <div class="operation operation--alt">
+        <div class="operation__number">3</div>
+        <i class="operation__icon operation__icon--alt fas fa-store"></i>
+        <div class="operation__text">Dégustez au restaurant</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section section--alt">
+    <h2 class="section__heading">Restaurants</h2>
   </section>
 
   <footer class="footer">
