Fix blur mixin and add restaurants section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="section">
     <h2 class="section__heading">Fonctionnement</h2>
     <div class="flex flex--responsive-columns">
-      <div class="operation operation--first">
+      <div class="operation">
         <div class="operation__number">1</div>
         <i class="operation__icon fas fa-mobile-alt"></i>
         <div class="operation__text">Choisissez un restaurant</div>
@@ -49,6 +49,56 @@
 
   <section class="section section--alt">
     <h2 class="section__heading">Restaurants</h2>
+    <div class="flex flex--restaurants">
+      <div class="card card--new">
+        <div class="card__picture">
+          <a href="" class="card__link"></a>
+          <img src="public/images/restaurants/one.jpg" />
+        </div>
+        <div class="card__text">
+          <a href="" class="card__link"></a>
+          <h3 class="card__heading">La palette du goût</h3>
+          <p class="card__location">Ménilmontant</p>
+          <i class="card__like fas fa-heart"></i>
+        </div>
+      </div>
+      <div class="card card--new">
+        <div class="card__picture">
+          <a href="" class="card__link"></a>
+          <img src="public/images/restaurants/two.jpg" />
+        </div>
+        <div class="card__text">
+          <a href="" class="card__link"></a>
+          <h3 class="card__heading">La note enchantée</h3>
+          <p class="card__location">Charonne</p>
+          <i class="card__like fas fa-heart"></i>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__picture">
+          <a href="" class="card__link"></a>
+          <img src="public/images/restaurants/three.jpg" />
+        </div>
+        <div class="card__text">
+          <a href="" class="card__link"></a>
+          <h3 class="card__heading">À la française</h3>
+          <p class="card__location">Cité rouge</p>
+          <i class="card__like fas fa-heart"></i>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card__picture">
+          <a href="" class="card__link"></a>
+          <img src="public/images/restaurants/four.jpg" />
+        </div>
+        <div class="card__text">
+          <a href="" class="card__link"></a>
+          <h3 class="card__heading">Le délice des sens</h3>
+          <p class="card__location">Folie-Méricourt</p>
+          <i class="card__like fas fa-heart"></i>
+        </div>
+      </div>
+    </div>
   </section>
 
   <footer class="footer">
