Replace flex with grid on restaurants cards for better responsive design

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
 
   <section class="section">
-    <h2 class="section__heading">Fonctionnement</h2>
+    <h2 class="section__heading section__heading--responsive-centered">Fonctionnement</h2>
     <div class="flex flex--responsive-columns">
       <div class="operation">
         <div class="operation__number">1</div>
@@ -48,8 +48,8 @@
   </section>
 
   <section class="section section--alt">
-    <h2 class="section__heading">Restaurants</h2>
-    <div class="flex flex--restaurants">
+    <h2 class="section__heading section__heading--card-responsive">Restaurants</h2>
+    <div class="grid -flex -flex--restaurants">
       <div class="card card--new">
         <div class="card__picture">
           <a href="" class="card__link"></a>
