--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
-      <li class="footer__links--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
-      <li class="footer__links--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
-      <li><a href="">Mentions légales</a></li>
-      <li><a href="mailto:contact@mail.com">Contact</a></li>
+      <li class="footer__link footer__link--with-icon"><i class="fas fa-utensils"></i> <a href="">Proposer un restaurant</a></li>
+      <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
+      <li class="footer__link"><a href="">Mentions légales</a></li>
+      <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
   </footer>
 
   <script src="https://kit.fontawesome.com/d898f2f582.js" crossorigin="anonymous"></script>
