--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="section section--centered section--alt">
     <h2 class="section__heading">Réservez le menu qui vous convient</h2>
     <p class="section__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-    <span class="btn">Explorer nos restaurants</span>
+    <a href="#restaurants" class="btn">Explorer nos restaurants</a>
   </section>
 
   <section class="section">
@@ -48,7 +48,7 @@
   </section>
 
   <section class="section section--alt">
-    <h2 class="section__heading section__heading--card-responsive">Restaurants</h2>
+    <h2 id="restaurants" class="section__heading section__heading--card-responsive">Restaurants</h2>
     <div class="grid -flex -flex--restaurants">
       <div class="card card--new">
         <div class="card__picture">
