--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
+  <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>ohmyfood</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
