--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div class="grid -flex -flex--restaurants">
       <div class="card card--new">
         <div class="card__picture">
-          <a href="" class="card__link"></a>
+          <a href="la-palette-du-gout.html" class="card__link"></a>
           <img src="public/images/restaurants/one.jpg" />
         </div>
         <div class="card__text">
-          <a href="" class="card__link"></a>
+          <a href="la-palette-du-gout.html" class="card__link"></a>
           <h3 class="card__heading">La palette du goût</h3>
           <p class="card__location">Ménilmontant</p>
           <i class="card__like fas fa-heart"></i>
@@ -65,11 +65,11 @@
       </div>
       <div class="card card--new">
         <div class="card__picture">
-          <a href="" class="card__link"></a>
+          <a href="la-note-enchantee.html" class="card__link"></a>
           <img src="public/images/restaurants/two.jpg" />
         </div>
         <div class="card__text">
-          <a href="" class="card__link"></a>
+          <a href="la-note-enchantee.html" class="card__link"></a>
           <h3 class="card__heading">La note enchantée</h3>
           <p class="card__location">Charonne</p>
           <i class="card__like fas fa-heart"></i>
@@ -77,11 +77,11 @@
       </div>
       <div class="card">
         <div class="card__picture">
-          <a href="" class="card__link"></a>
+          <a href="a-la-francaise.html" class="card__link"></a>
           <img src="public/images/restaurants/three.jpg" />
         </div>
         <div class="card__text">
-          <a href="" class="card__link"></a>
+          <a href="a-la-francaise.html" class="card__link"></a>
           <h3 class="card__heading">À la française</h3>
           <p class="card__location">Cité rouge</p>
           <i class="card__like fas fa-heart"></i>
@@ -89,11 +89,11 @@
       </div>
       <div class="card">
         <div class="card__picture">
-          <a href="" class="card__link"></a>
+          <a href="le-delice-des-sens.html" class="card__link"></a>
           <img src="public/images/restaurants/four.jpg" />
         </div>
         <div class="card__text">
-          <a href="" class="card__link"></a>
+          <a href="le-delice-des-sens.html" class="card__link"></a>
           <h3 class="card__heading">Le délice des sens</h3>
           <p class="card__location">Folie-Méricourt</p>
           <i class="card__like fas fa-heart"></i>
