--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -10,6 +10,7 @@
 
 <body>
   <header class="header">
+    <a href="/"><i class="header__arrow fas fa-arrow-left"></i></a>
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
