Add menu headings, fix font-weight and improve sections BEM structure

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <input type="text" id="location" class="search__input" value="Paris, Belleville" />
   </div>
 
-  <section class="section section--centered section--alt">
+  <section class="section section--centered section">
     <h2 class="section__heading">Réservez le menu qui vous convient</h2>
     <p class="section__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
     <a href="#restaurants" class="btn">Explorer nos restaurants</a>
   </section>
 
-  <section class="section">
+  <section class="section section--alt">
     <h2 class="section__heading section__heading--responsive-centered">Fonctionnement</h2>
     <div class="flex flex--responsive-columns">
       <div class="operation">
@@ -48,7 +48,7 @@
     </div>
   </section>
 
-  <section class="section section--alt">
+  <section class="section">
     <h2 id="restaurants" class="section__heading section__heading--card-responsive">Restaurants</h2>
     <div class="grid -flex -flex--restaurants">
       <div class="card card--new">
