--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -23,6 +23,13 @@
     </div>
   </div>
 
+  <section class="section section--menu">
+    <h2 class="section__heading section__heading--menu">Entrées</h2>
+    <h2 class="section__heading section__heading--menu">Plats</h2>
+    <h2 class="section__heading section__heading--menu">Desserts</h2>
+    <a href="" class="btn">Commander</a>
+  </section>
+
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
