--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -23,6 +23,135 @@
     </div>
   </div>
 
+  <section class="section section--menu">
+    <h2 class="section__heading section__heading--menu">Entrées</h2>
+
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Ravioles de foie gras</h3>
+        <p class="dishcard__infos">Accompagnés de leur crème à la truffe</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">25€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Caviar osciètre</h3>
+        <p class="dishcard__infos">Sur blini à la farine de blé noir</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">35€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Homard et espuma de potiron</h3>
+        <p class="dishcard__infos">Mariné aux zestes d'orange</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">20€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Foie gras de canard cuit entier</h3>
+        <p class="dishcard__infos">Confiture de figue et pain toasté</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">35€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+  </section>
+
+  <section class="section section--menu">
+    <h2 class="section__heading section__heading--menu">Plats</h2>
+
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Noix de coquilles Saint-Jacques</h3>
+        <p class="dishcard__infos">Sur lit de purée de céleri-rave</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">40€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Langoustine poêlée</h3>
+        <p class="dishcard__infos">Purée de patate douce</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">35€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Mijoté de queue de boeuf</h3>
+        <p class="dishcard__infos">Et riz sauvage aux zestes de citron</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">44€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+  </section>
+
+  <section class="section section--menu">
+    <h2 class="section__heading section__heading--menu">Desserts</h2>
+
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Macaron noisette et chocolat</h3>
+        <p class="dishcard__infos">Glace au caramel brun et sel de Guérande</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">18€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Baba au rhum revisité</h3>
+        <p class="dishcard__infos">Avec son coulis de citron</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">22€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+    <label class="dishcard">
+      <div class="dishcard__l-container">
+        <h3 class="dishcard__heading">Tarte au citron meringuée</h3>
+        <p class="dishcard__infos">Déstructurée</p>
+      </div>
+      <div class="dishcard__r-container">
+        <span class="dishcard__price">23€</span>
+        <input type="checkbox" class="dishcard__checkbox" />
+        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+      </div>
+    </label>
+  </section>
+
+  <section class="section section--btn">
+    <a href="" class="btn">Commander</a>
+  </section>
+
   <footer class="footer">
     <h2 class="footer__heading">ohmyfood</h2>
     <ul class="footer__links">
