--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="card card--new">
         <div class="card__picture">
           <a href="la-palette-du-gout.html" class="card__link"></a>
-          <img src="public/images/restaurants/one.jpg" />
+          <img src="public/images/restaurants/one.jpg" alt="La palette du goût" />
         </div>
         <div class="card__text">
           <a href="la-palette-du-gout.html" class="card__link"></a>
@@ -66,7 +66,7 @@
       <div class="card card--new">
         <div class="card__picture">
           <a href="la-note-enchantee.html" class="card__link"></a>
-          <img src="public/images/restaurants/two.jpg" />
+          <img src="public/images/restaurants/two.jpg" alt="La note enchantée" />
         </div>
         <div class="card__text">
           <a href="la-note-enchantee.html" class="card__link"></a>
@@ -78,7 +78,7 @@
       <div class="card">
         <div class="card__picture">
           <a href="a-la-francaise.html" class="card__link"></a>
-          <img src="public/images/restaurants/three.jpg" />
+          <img src="public/images/restaurants/three.jpg" alt="À la française" />
         </div>
         <div class="card__text">
           <a href="a-la-francaise.html" class="card__link"></a>
@@ -90,7 +90,7 @@
       <div class="card">
         <div class="card__picture">
           <a href="le-delice-des-sens.html" class="card__link"></a>
-          <img src="public/images/restaurants/four.jpg" />
+          <img src="public/images/restaurants/four.jpg" alt="Le délice des sens" />
         </div>
         <div class="card__text">
           <a href="le-delice-des-sens.html" class="card__link"></a>
@@ -109,6 +109,7 @@
       <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
       <li class="footer__link"><a href="">Mentions légales</a></li>
       <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+    </ul>
   </footer>
 
   <script src="https://kit.fontawesome.com/d898f2f582.js" crossorigin="anonymous"></script>
