--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -15,9 +15,7 @@
   </header>
 
   <div class="presentation">
-    <div class="presentation__picture">
-      <img src="public/images/restaurants/one.jpg" />
-    </div>
+    <img class="presentation__picture" src="public/images/restaurants/one.jpg" alt="La palette du goût" />
     <div class="presentation__heading">
       <h2 class="presentation__name">La palette du goût</h2>
     </div>
@@ -148,6 +146,7 @@
       <li class="footer__link footer__link--with-icon"><i class="fad fa-hands-helping"></i> <a href="">Devenir partenaire</a></li>
       <li class="footer__link"><a href="">Mentions légales</a></li>
       <li class="footer__link"><a href="mailto:contact@mail.com">Contact</a></li>
+    </ul>
   </footer>
 
   <script src="https://kit.fontawesome.com/d898f2f582.js" crossorigin="anonymous"></script>
