Add loading spinner

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -14,6 +14,12 @@
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
+  <div class="loading-spinner">
+    <div class="loading-spinner__circle loading-spinner__circle--1"></div>
+    <div class="loading-spinner__circle loading-spinner__circle--2"></div>
+    <div class="loading-spinner__circle loading-spinner__circle--3"></div>
+  </div>
+
   <div class="presentation">
     <img class="presentation__picture" src="public/images/restaurants/three.jpg" alt="À la française" />
     <div class="presentation__heading">
