--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
+  <div class="loading-spinner">
+    <div class="loading-spinner__circle loading-spinner__circle--1"></div>
+    <div class="loading-spinner__circle loading-spinner__circle--2"></div>
+    <div class="loading-spinner__circle loading-spinner__circle--3"></div>
+  </div>
+
   <div class="search">
     <label for="location" class="search__label">
       <i class="fas fa-map-marker-alt"></i>
