Add fadein animation on loading for menu dishes

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,117 +22,123 @@
   </div>
 
   <section class="section section--menu">
-    <h2 class="section__heading section__heading--menu">Entrées</h2>
+    <div class="loading-block loading-block--1">
+      <h2 class="section__heading section__heading--menu">Entrées</h2>
 
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Tartare de thon</h3>
-        <p class="dishcard__infos">Assaisonné au yuzu</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">25€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Bouchée de homard croustillant</h3>
-        <p class="dishcard__infos">Et sa farandole de petits légumes</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">35€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Velouté de cèpes</h3>
-        <p class="dishcard__infos">Aux truffes</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">20€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Tartare de thon</h3>
+          <p class="dishcard__infos">Assaisonné au yuzu</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">25€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Bouchée de homard croustillant</h3>
+          <p class="dishcard__infos">Et sa farandole de petits légumes</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">35€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Velouté de cèpes</h3>
+          <p class="dishcard__infos">Aux truffes</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">20€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+    </div>
   </section>
 
   <section class="section section--menu">
-    <h2 class="section__heading section__heading--menu">Plats</h2>
+    <div class="loading-block loading-block--2">
+      <h2 class="section__heading section__heading--menu">Plats</h2>
 
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Poulet rôti aux herbes de Provence</h3>
-        <p class="dishcard__infos">Et sa crème de truffe</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">40€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Langouste rôtie</h3>
-        <p class="dishcard__infos">Et ses légumes de saison</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">35€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Côte de boeuf Angus</h3>
-        <p class="dishcard__infos">Et sa purée de panais</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">44€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Poulet rôti aux herbes de Provence</h3>
+          <p class="dishcard__infos">Et sa crème de truffe</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">40€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Langouste rôtie</h3>
+          <p class="dishcard__infos">Et ses légumes de saison</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">35€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Côte de boeuf Angus</h3>
+          <p class="dishcard__infos">Et sa purée de panais</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">44€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+    </div>
   </section>
 
   <section class="section section--menu">
-    <h2 class="section__heading section__heading--menu">Desserts</h2>
+    <div class="loading-block loading-block--3">
+      <h2 class="section__heading section__heading--menu">Desserts</h2>
 
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Farandole de desserts</h3>
-        <p class="dishcard__infos">Du chef</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">18€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Crème brulée</h3>
-        <p class="dishcard__infos">Revisitée</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">22€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
-    <label class="dishcard">
-      <div class="dishcard__l-container">
-        <h3 class="dishcard__heading">Tiramisu</h3>
-        <p class="dishcard__infos">À la noisette</p>
-      </div>
-      <div class="dishcard__r-container">
-        <span class="dishcard__price">23€</span>
-        <input type="checkbox" class="dishcard__checkbox" />
-        <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
-      </div>
-    </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Farandole de desserts</h3>
+          <p class="dishcard__infos">Du chef</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">18€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Crème brulée</h3>
+          <p class="dishcard__infos">Revisitée</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">22€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+      <label class="dishcard">
+        <div class="dishcard__l-container">
+          <h3 class="dishcard__heading">Tiramisu</h3>
+          <p class="dishcard__infos">À la noisette</p>
+        </div>
+        <div class="dishcard__r-container">
+          <span class="dishcard__price">23€</span>
+          <input type="checkbox" class="dishcard__checkbox" />
+          <div class="dishcard__added"><i class="fas fa-check-circle"></i></div>
+        </div>
+      </label>
+    </div>
   </section>
 
   <section class="section section--btn">
