Add like button on menu pages

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -18,6 +18,7 @@
     <img class="presentation__picture" src="public/images/restaurants/two.jpg" alt="La note enchantée" />
     <div class="presentation__heading">
       <h2 class="presentation__name">La note enchantée</h2>
+      <i class="presentation__like fas fa-heart"></i>
     </div>
   </div>
 
