--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -18,6 +18,7 @@
     <img class="presentation__picture" src="public/images/restaurants/three.jpg" alt="À la française" />
     <div class="presentation__heading">
       <h2 class="presentation__name">À la française</h2>
+      <i class="presentation__like fas fa-heart"></i>
     </div>
   </div>
 
