--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -18,6 +18,7 @@
     <img class="presentation__picture" src="public/images/restaurants/four.jpg" alt="Le délice des sens" />
     <div class="presentation__heading">
       <h2 class="presentation__name">Le délice des sens</h2>
+      <i class="presentation__like fas fa-heart"></i>
     </div>
   </div>
 
