--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -18,7 +18,7 @@
     <img class="presentation__picture" src="public/images/restaurants/one.jpg" alt="La palette du goût" />
     <div class="presentation__heading">
       <h2 class="presentation__name">La palette du goût</h2>
-      <i class="presentation__like fas fa-heart"></i>
+      <i class="like-button like-button--menu fal fa-heart"></i>
     </div>
   </div>
 
