Add animation on like button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a href="la-palette-du-gout.html" class="card__link"></a>
           <h3 class="card__heading">La palette du goût</h3>
           <p class="card__location">Ménilmontant</p>
-          <i class="like-button like-button--card fal fa-heart"></i>
+          <i class="like-button like-button--card fas fa-heart"></i>
         </div>
       </div>
       <div class="card card--new">
@@ -78,7 +78,7 @@
           <a href="la-note-enchantee.html" class="card__link"></a>
           <h3 class="card__heading">La note enchantée</h3>
           <p class="card__location">Charonne</p>
-          <i class="like-button like-button--card fal fa-heart"></i>
+          <i class="like-button like-button--card fas fa-heart"></i>
         </div>
       </div>
       <div class="card">
@@ -90,7 +90,7 @@
           <a href="a-la-francaise.html" class="card__link"></a>
           <h3 class="card__heading">À la française</h3>
           <p class="card__location">Cité rouge</p>
-          <i class="like-button like-button--card fal fa-heart"></i>
+          <i class="like-button like-button--card fas fa-heart"></i>
         </div>
       </div>
       <div class="card">
@@ -102,7 +102,7 @@
           <a href="le-delice-des-sens.html" class="card__link"></a>
           <h3 class="card__heading">Le délice des sens</h3>
           <p class="card__location">Folie-Méricourt</p>
-          <i class="like-button like-button--card fal fa-heart"></i>
+          <i class="like-button like-button--card fas fa-heart"></i>
         </div>
       </div>
     </div>
