--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -18,7 +18,7 @@
     <img class="presentation__picture" src="public/images/restaurants/three.jpg" alt="À la française" />
     <div class="presentation__heading">
       <h2 class="presentation__name">À la française</h2>
-      <i class="like-button like-button--menu fal fa-heart"></i>
+      <i class="like-button like-button--menu fas fa-heart"></i>
     </div>
   </div>
 
