Fix section heading padding, margin and alignment

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   </div>
 
   <section class="section section--centered section">
-    <h2 class="section__heading">Réservez le menu qui vous convient</h2>
+    <h2 class="section__heading section__heading--explore">Réservez le menu qui vous convient</h2>
     <p class="section__p">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
     <a href="#restaurants" class="btn">Explorer nos restaurants</a>
   </section>
 
   <section class="section section--alt">
-    <h2 class="section__heading section__heading--responsive-centered">Fonctionnement</h2>
+    <h2 class="section__heading section__heading--home">Fonctionnement</h2>
     <div class="flex flex--responsive-columns">
       <div class="operation">
         <div class="operation__number">1</div>
@@ -55,7 +55,7 @@
   </section>
 
   <section class="section">
-    <h2 id="restaurants" class="section__heading section__heading--card-responsive">Restaurants</h2>
+    <h2 id="restaurants" class="section__heading section__heading--home">Restaurants</h2>
     <div class="grid -flex -flex--restaurants">
       <div class="card card--new">
         <div class="card__picture">
