Fix home link from arrow button

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <a href="/"><i class="header__arrow fas fa-arrow-left"></i></a>
+    <a href="index.html"><i class="header__arrow fas fa-arrow-left"></i></a>
     <h1 class="header__heading">ohmyfood</h1>
   </header>
 
