Add description meta

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>La palette du goût - ohmyfood</title>
-  <meta name="description" content="">
+  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
