--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="public/stylesheets/main.min.css">
   <link rel="icon" href="public/images/icon.png" type="image/png">
   <title>Le délice des sens - ohmyfood</title>
-  <meta name="description" content="">
+  <meta name="description" content="Découvrez des restaurants d'exception, sélectionnés par nos soins.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
